; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/ui/extr_ui_shared.c_Script_Orbit.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/ui/extr_ui_shared.c_Script_Orbit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Script_Orbit(%struct.TYPE_3__* %0, i8** %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i8*, align 8
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  %9 = alloca float, align 4
  %10 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i8** %1, i8*** %4, align 8
  %11 = load i8**, i8*** %4, align 8
  %12 = call i64 @String_Parse(i8** %11, i8** %5)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %46

14:                                               ; preds = %2
  %15 = load i8**, i8*** %4, align 8
  %16 = call i64 @Float_Parse(i8** %15, float* %8)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %45

18:                                               ; preds = %14
  %19 = load i8**, i8*** %4, align 8
  %20 = call i64 @Float_Parse(i8** %19, float* %9)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %45

22:                                               ; preds = %18
  %23 = load i8**, i8*** %4, align 8
  %24 = call i64 @Float_Parse(i8** %23, float* %6)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %45

26:                                               ; preds = %22
  %27 = load i8**, i8*** %4, align 8
  %28 = call i64 @Float_Parse(i8** %27, float* %7)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %45

30:                                               ; preds = %26
  %31 = load i8**, i8*** %4, align 8
  %32 = call i64 @Int_Parse(i8** %31, i32* %10)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %45

34:                                               ; preds = %30
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = load i8*, i8** %5, align 8
  %39 = load float, float* %8, align 4
  %40 = load float, float* %9, align 4
  %41 = load float, float* %6, align 4
  %42 = load float, float* %7, align 4
  %43 = load i32, i32* %10, align 4
  %44 = call i32 @Menu_OrbitItemByName(i32 %37, i8* %38, float %39, float %40, float %41, float %42, i32 %43)
  br label %45

45:                                               ; preds = %34, %30, %26, %22, %18, %14
  br label %46

46:                                               ; preds = %45, %2
  ret void
}

declare dso_local i64 @String_Parse(i8**, i8**) #1

declare dso_local i64 @Float_Parse(i8**, float*) #1

declare dso_local i64 @Int_Parse(i8**, i32*) #1

declare dso_local i32 @Menu_OrbitItemByName(i32, i8*, float, float, float, float, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
